# protein-purification

./: .gitignore  FEATURES.md  README.md  pyproject.toml  run.sh  server.py  server.spec
backend/: __init__.py  config.py  dependencies.py  main.py  session_store.py
backend/api/: __init__.py  electrophoresis.py  files.py  fractions.py  mixtures.py  schemas.py  separation.py  sessions.py
backend/engine/: __init__.py  account.py  constants.py  enums.py  gel.py  mixture_io.py  mixture_json.py  protein.py  protein_data.py  separation.py  session.py  step_record.py
data/mixtures/: Complex_Mixture.json  Default_Mixture.json  Easy3_Mixture.json  Example_Mixture.json  Example_Mixture.txt
electron/: main.js  package.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.ts  plotly.d.ts  state.ts
frontend/src/components/: dialog-base.ts  spinner.ts  toolbar.ts
frontend/src/dialogs/: affinity.ts  ammonium-sulfate.ts  fraction-select.ts  gel-filtration.ts  heat-treatment.ts  hic.ts  ion-exchange.ts
frontend/src/i18n/: en.json  es.json  fr.json  id.json
frontend/src/styles/: main.css
frontend/src/views/: elution.ts  gel.ts  record.ts  splash.ts
scripts/: build-electron.ps1  build-electron.sh  convert_mixtures.py
tests/: conftest.py
tests/api/: test_separation_api.py  test_sessions.py
tests/engine/: test_account.py  test_gel.py  test_mixture_io.py  test_mixture_json.py  test_protein.py  test_protein_data.py  test_separation.py  test_session.py
